Remedy depreciations in JEI integration